--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "beautifulsoup4>=4.13.5",
+    "fpdf2>=2.8.4",
+    "reportlab>=4.0.0",
+    "requests>=2.32.5",
+]
