--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.13.5",
+    "elasticsearch>=9.1.0",
     "fpdf2>=2.8.4",
+    "pypdf2>=3.0.1",
     "reportlab>=4.0.0",
     "requests>=2.32.5",
 ]
